# moodle-toolbox

./: .gitignore  DUPLICATES_ANALYSIS.md  INDEX.md  QUICK_START.md  README.md  README_convert_xml_gift.md  README_html_to_markdown.md  README_scripts.md  README_validate_questions.md  README_xml_maintenance.md  caracteres_especiales.md  convert_code_blocks_chars.py  convert_html_to_markdown.py  convert_xml_gift.py  convert_xml_html_to_markdown.py  ensure_cdata_in_text_blocks.py  evaluate_questions_directory.py  find_similar_questions.py  fix_gift_indentation.py  format_gift.py  pyproject.toml  remove_tags_from_xml.py  rename_xml_files_by_question_name.py  validate_questions.py  verify_gift_questions.py  xml_preview.html
docs/: ARCHIVE_ORGANIZATION.md  ARCHIVE_README_code_chars.md  ARCHIVE_README_parser.md  QUICK_START.md  README_validate_questions.md  README_xml_maintenance.md  caracteres_especiales.md
ejemplos/: ejemplo.gift  ejemplo.xml
src/gift_tools/: verify_gift_directory.py
src/questions/: cli.py
src/questions/commands/: ai.py  analyze.py  common.py  config.py  convert.py  fix.py  format.py  split.py  validate.py  xml.py
src/questions/core/: ai.py  config.py  converter.py  formatter.py  llm_instructions.py  naming.py  parser.py  splitter.py  validator.py  xml_tools.py
tests/: test_cli.py  test_converter.py  test_formatter.py  test_naming.py  test_parser.py  test_splitter.py  test_validator.py  test_xml_tools.py
tests/data/gift/: sample.gift
