[project]
name = "questions"
version = "0.1.0"
description = "Herramientas para gestionar preguntas de Moodle (GIFT, XML)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tatsu>=5.15.1",
    "python-dotenv",
    "click>=8.0.0",
    "google-genai>=2.4.0",
]

[project.scripts]
questions = "questions.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/questions"]

